style.css
@keyframes spin {
  0% { transform: translate(-50%, -50%) rotate(0deg); }
  100% { transform: translate(-50%, -50%) rotate(360deg);}
}

@font-face {
  font-family: "Syne";
  src: url(syne-regular.woff2), url(syne-regular.woff);
}

@font-face {
  font-family:  "Syne Extra";
  src: url(syne-extra.woff2), url(syne-extra.woff);
}

body {
	font-family: "Syne", Arial;
	font-size: 32px;
	line-height: 1.25;

  background-color: #18191a;
  background-image: url('assets/stars.svg');
  color: #d3d1cf;
	margin: 240px auto 240px auto;
	max-width: 1120px;

  overflow-x: hidden;

  transition: background-color 1s;
}

p {
  font-family: "Syne";
  color: #e5745d;
  text-align: center
}

header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding: 32px;
  text-align: center;
  z-index: 1;
}

nav {
  position: fixed;
  top: 0;
  right: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  font-size: 15pt;
  float: right;
  height: 38vh;
  width: 5vw;
}

section {
  margin: 80px 0 80px 0;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
}

section:nth-child(odd) {
  flex-direction: row-reverse;
}

section div {
  padding: 40px;
  position: relative;
}

section img {
  position: relative;
}

div.stamps {
  position: absolute;
  top: 0;
  left: 50%;
  width: 50%;
}

div.stamps img {
  position: absolute;
  transform: translate(-50%, -50%);
  animation: spin 30s linear infinite;
}

.rounded-corners {
  border-radius: 2px;
}

#selfie {
  transform: rotate(180deg);
  width: 550px
}

.pic:hover {
  transform: scale(1.07)
}

#github {
  width: 38px;
  padding-bottom: 8px;
}

#linkedin {
  width: 40px;
  padding-left: 1px;
}

#gmail {
  width: 35px;
  padding-left: 1px;
  margin-top: -7px
}

#resume {
  padding-top: 1em;
  padding-right: 2em
}

a {
  text-decoration: none;
  color: #d3d1cf;
}

a:visited {
  text-decoration: none;
}

a:hover {
  color: #e5745d;;
}

a:active {
  color: #d3d1cf
}

#github-icon {
  width: 35px;
  height: auto;
}

#github-icon:hover {
  transform: scale(1.07);
  height: auto;
}

.git-align {
  display: inline;
  padding: -1em;
}

#selfie:hover{
  transform: scale(1.07);
}

h3 {
 font-size: 38pt
}

h2 {
  font-size: 42pt;
}

header{
  opacity: .99;
  transition: opacity 1s;
}

header.scrolled {
  opacity: .0;
}

